<?xml version="1.0"?>
<package format = "2">
	<name>roombot_nav2_bringup</name>
	<version>1.0.0</version>
	<description>bringup for nav2 stack for roombot</description>

	<maintainer email="tzcastillo@unm.edu">Tzion Castillo</maintainer>

	<license>MIT</license>

	<author email="tzcastillo@unm.edu">Tzion Castillo</author>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<exec_depend>nav2</exec_depend>
	<exec_depend>nav2_bringup</exec_depend>
	<exec_depend>cmd_vel_mux</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
