<?xml version="1.0"?>
<package format="2">
	<name>roombot_description</name>
	<version>1.0.0</version>
	<description> Robot URDF descriptions for roombot</description>

	<maintainer email="tzcastillo@unm.edu">Tzion Castillo</maintainer>

	<license>MIT</license>

	<author email="tzcastillo@unm.edu">Tzion Castillo</author>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>urdf</exec_depend>
	<exec_depend>xacro</exec_depend>
	<exec_depend>create_driver</exec_depend>
	<exec_depend>create_description</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
